<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:background="@mipmap/login_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/input_password"
            android:layout_alignParentBottom="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/edit_hint"
            android:singleLine="true"
            android:drawableLeft="@mipmap/password"
            android:background="@drawable/edit_selected_backg"
            android:inputType="textPassword"
            android:drawablePadding="6dp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/input_username"
            android:layout_marginBottom="24dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:drawableLeft="@mipmap/username"
            android:textColorHint="@color/edit_hint"
            android:drawablePadding="6dp"
            android:background="@drawable/edit_selected_backg"
            android:paddingLeft="10dp"
            android:layout_above="@+id/password_edt">
            <requestFocus />
        </EditText>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo1"
            android:layout_above="@+id/username_edt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/btn_login_backg"
            android:layout_marginTop="12dp"/>
        <TextView
            android:id="@+id/support_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/support"
            android:gravity="center"
            android:layout_marginBottom="38dp"
            android:textColor="@color/main_list_text"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/support_tv"
            android:text="@string/copyright"
            android:gravity="center"
            android:textColor="@color/main_list_text"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"/>
    </RelativeLayout>
</LinearLayout>