<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="100dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/inspect_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:visibility="visible"
            android:textColor="@color/main_list_text"
            android:text="@string/inspect_title"/>
        <TextView
            android:id="@+id/inspect_explain_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/main_list_text"
            android:text="@string/inspect_explain"/>
        <TextView
            android:id="@+id/inspect_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:textColor="@color/main_list_text"
            android:text="@string/inspect_time"/>
    </LinearLayout>
    <ImageButton
        android:visibility="visible"
        android:id="@+id/report_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:focusable="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:background="@color/trans"
        android:src="@mipmap/next"
        android:gravity="center"
        android:textColor="@color/main_list_text"
       />
</RelativeLayout>