<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_btn"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="110dp">
    <ImageButton
        android:id="@+id/next_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="24dp"
        android:src="@mipmap/next"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        />
    <ImageView
        android:id="@+id/chubaogao_img"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:src="@mipmap/baogaoyichu"
        android:visibility="gone"
        android:layout_toLeftOf="@+id/next_img"
        android:layout_marginRight="15dp"/>
    <LinearLayout
        android:id="@+id/qianm_layout"
        android:layout_toLeftOf="@+id/chubaogao_img"
        android:layout_width="match_parent"
        android:paddingRight="12dp"
        android:layout_height="110dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/inspect_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/inspect_name"
            android:textColor="@color/main_list_text"
            />
        <TextView
            android:id="@+id/inspect_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:visibility="visible"
            android:textColor="@color/main_list_text"
            android:text="@string/inspect_title"/>
        <TextView
            android:id="@+id/inspect_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:textColor="@color/main_list_text"
            android:text="@string/inspect_time"/>
    </LinearLayout>


</RelativeLayout>