<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeff1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/title_backg"
        android:layout_height="54dp">
        <ImageButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_marginLeft="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@mipmap/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/feedback"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"/>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_feedback_edt"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:hint="@string/input_feedback"
            android:textSize="14sp"
            android:layout_margin="12dp"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:maxLength="140"
            android:gravity="top"
            android:background="@drawable/edit_selected_backg"/>
        <TextView
            android:id="@+id/edit_state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="0/140"
            android:textColor="@color/edit_hint"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="20dp"/>
    </FrameLayout>
    <Button
        android:id="@+id/commitBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_login_backg"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="38dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/commit"/>
</LinearLayout>