<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="110dp">
    <com.rimi.angel.angeldoctor.widget.CircleImageView
        android:id="@+id/headimg"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:layout_marginLeft="10dp"/>
    <ImageView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_alignParentRight="true"
        android:src="@mipmap/next"
        android:layout_marginRight="16dp"
        android:visibility="visible"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:id="@+id/common_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_toRightOf="@+id/headimg"
        android:layout_marginLeft="6dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/patient_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:text="李丽娜"/>

        </LinearLayout>
        <TextView
            android:id="@+id/appointtime_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="#11a8bb"
            android:textSize="13sp"
            android:drawablePadding="5dp"
            android:text="@string/appoint_time"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/age_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/main_list_text"
                android:text="@string/age"/>

        </LinearLayout>
        <TextView
            android:id="@+id/sex_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/main_list_text"
            android:text="@string/sex"/>
    </LinearLayout>
</RelativeLayout>