<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="110dp">
    <com.rimi.angel.angeldoctor.widget.CircleImageView
        android:id="@+id/headimg"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:layout_marginLeft="10dp"
        />
    <ImageButton
        android:id="@+id/call_btn"
        android:layout_width="40dp"
        android:layout_height="110dp"
        android:src="@mipmap/tele"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"

        android:background="@android:color/transparent"/>
    <LinearLayout
        android:id="@+id/common_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_toRightOf="@+id/headimg"
        android:layout_toLeftOf="@+id/call_btn"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/patient_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:drawablePadding="6dp"
                android:text="李丽娜"/>
        </LinearLayout>
        <TextView
            android:id="@+id/patient_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_weight="1"
            android:textColor="@color/main_list_text"
            android:text="13111111111"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/patient_age_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/main_list_text"
                android:text="@string/age"/>
            <TextView
                android:id="@+id/patient_sex_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sex"
                android:gravity="center"
                android:textColor="@color/main_list_text"
                android:layout_marginLeft="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/patient_birth_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/main_list_text"
                android:textSize="13sp"
                android:drawablePadding="5dp"
                android:text="@string/birthday"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>