<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/patientlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/title_backg"
        android:layout_height="54dp">
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_marginLeft="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:src="@mipmap/back"/>
        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@mipmap/search"
            />
        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/my_patient"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"/>
    </RelativeLayout>   
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/tab_backg"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tab_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/member"
            android:textColor="@color/isselect"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"/>
        <TextView
            android:id="@+id/tab_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/not_member"
            android:gravity="center"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/cursor_img"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:scaleType="fitXY"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@android:color/transparent"
        android:src="@drawable/tab_selected_pressed_holo"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/mViewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/title_backg"
            android:layout_height="54dp">
            <EditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:paddingLeft="40dp"
                android:paddingRight="45dp"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textColor="@color/white"
                android:background="@drawable/edt_search_patient_backg"/>
            <requestFocus />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/search"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:layout_marginLeft="32dp"
                android:drawablePadding="8dp"
                android:textSize="14sp"
                />
            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tishi_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="请输入搜索关键字如病人名或电话"
                android:textColor="@color/isselect"
                android:textSize="15sp"/>
            <ListView
                android:id="@+id/searchListview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

    </LinearLayout>

</FrameLayout>